--- a/salon-international-de-la-lingerie/fr.html
+++ b/salon-international-de-la-lingerie/fr.html
@@ -60,14 +60,8 @@
                   <p class="label-description">Saisissez vos références de stand ci-dessous.</p>
                   <div class="inputs_wrapper">
                     <div class="input_wrapper">
-                      <p>Tente : </p>
-                      <div class="form-select">
-                        <select name="tents" id="tents">
-                          <option value="louvre">Louvre</option>
-                          <option value="tuileries">Tuileries</option>
-                          <option value="concorde">Concorde</option>
-                        </select>
-                      </div>
+                      <p>Numéro du hall : </p>
+                      <input type="text" autocapitalize="on" value="1" id="hallNumber" placeholder="1" maxlength="1" disabled>
                     </div>
                     <div class="input_wrapper">
                       <p>Numéro de stand : </p>
