--- a/salon-international-de-la-lingerie/fr.html
+++ b/salon-international-de-la-lingerie/fr.html
@@ -216,7 +216,7 @@
               <div class='logo-picture_wrapper'>
                 <img src="assets/logos/logo-SIL.png" alt="Salon International de la Lingerie Logo" class="tradeshow-logo-picture"/>
               </div>
-              <p class="label-description">Télécharger le logo de Salon International de la Lingerie en PNG et SVG.</p>
+              <p class="label-description">Télécharger le logo du Salon International de la Lingerie en PNG et SVG.</p>
               <button class="download-buttons" id="downloadAllLogos" data-button-id="logo-download">Télécharger les logos</button>
             </div>
           </div>
@@ -228,3 +228,4 @@
   <script type="module" src="../shared-assets/js/main.js"></script>
 </body>
 </html>
+
