--- a/shoppe-object/fr.html
+++ b/shoppe-object/fr.html
@@ -111,7 +111,7 @@
                 <li class="image-container">
                   <div class="image-title-socials-container">
                     <div class="image-title-container">
-                      <h3>Format Story</h3>
+                      <h3>Story format</h3>
                       <p>(1080x1920)</p>
                     </div>
                     <div class="image-socials-container">
@@ -120,13 +120,13 @@
                       <img src="../shared-assets/socials/tiktok.svg" alt="tiktok">
                     </div>
                   </div>
-                    <img src="assets/generic-banners/1080x1920.png" alt="Bijorhca Story Format" class="generic-banners">
-                    <a href="assets/generic-banners/1080x1920.png" download="BIJORHCA-JAN-26_story.png" class="download-button-small" data-button-id="BIJORHCA-JAN-26_generic-story">Download</a>
+                    <img src="assets/generic-banners/1080x1920.png" alt="Shoppe Object Story Format" class="generic-banners">
+                    <a href="assets/generic-banners/1080x1920.png" download="SHOPPE-OBJECT-JAN-26_story.png" class="download-button-small" data-button-id="SOP-JAN-26_generic-story">Télécharger</a>
                 </li>
                 <li class="image-container">
                   <div class="image-title-socials-container">
                     <div class="image-title-container">
-                      <h3>Format Portrait</h3>
+                      <h3>Portrait Format</h3>
                       <p>(1080x1350)</p>
                     </div>
                     <div class="image-socials-container">
@@ -134,13 +134,13 @@
                       <img src="../shared-assets/socials/instagram.svg" alt="instagram">
                     </div>
                   </div>
-                    <img src="assets/generic-banners/1080x1350.png" alt="Bijorhca Portrait Format" class="generic-banners">
-                    <a href="assets/generic-banners/1080x1350.png" download="BIJORHCA-JAN-26_portrait.png" class="download-button-small" data-button-id="BIJORHCA-JAN-26_generic-portrait">Download</a>
+                    <img src="assets/generic-banners/1080x1350.png" alt="Shoppe Object Portrait Format" class="generic-banners">
+                    <a href="assets/generic-banners/1080x1350.png" download="SHOPPE-OBJECT-JAN-26_portrait.png" class="download-button-small" data-button-id="SOP-JAN-26_generic-portrait">Télécharger</a>
                 </li>
                 <li class="image-container">
                   <div class="image-title-socials-container">
                     <div class="image-title-container">
-                      <h3>Format Carré</h3>
+                      <h3>Square format</h3>
                       <p>(1080x1080)</p>
                     </div>
                     <div class="image-socials-container">
@@ -149,13 +149,13 @@
                       <img src="../shared-assets/socials/x.svg" alt="x">
                     </div>
                   </div>
-                    <img src="assets/generic-banners/1080x1080.png" alt="Bijorhca Square Format" class="generic-banners">
-                    <a href="assets/generic-banners/1080x1080.png" download="BIJORHCA-JAN-26_square.png" class="download-button-small" data-button-id="BIJORHCA-JAN-26_generic-square">Download</a>
+                    <img src="assets/generic-banners/1080x1080.png" alt="Shoppe Object Square Format" class="generic-banners">
+                    <a href="assets/generic-banners/1080x1080.png" download="SHOPPE-OBJECT-JAN-26_square.png" class="download-button-small" data-button-id="SOP-JAN-26_generic-square">Télécharger</a>
                 </li>
                 <li class="image-container">
                   <div class="image-title-socials-container">
                     <div class="image-title-container">
-                      <h3>Format Paysage</h3>
+                      <h3>Landscape Format</h3>
                       <p>(1200x628)</p>
                     </div>
                     <div class="image-socials-container">
@@ -164,39 +164,39 @@
                       <img src="../shared-assets/socials/x.svg" alt="x">
                     </div>
                   </div>
-                    <img src="assets/generic-banners/1200x628.png" alt="Bijorhca Landscape Format" class="generic-banners">
-                    <a href="assets/generic-banners/1200x628.png" download="BIJORHCA-JAN-26_landscape.png" class="download-button-small" data-button-id="BIJORHCA-JAN-26_generic-landscape">Download</a>
+                    <img src="assets/generic-banners/1200x628.png" alt="Shoppe Object Landscape Format" class="generic-banners">
+                    <a href="assets/generic-banners/1200x628.png" download="SHOPPE-OBJECT-JAN-26_landscape.png" class="download-button-small" data-button-id="SOP-JAN-26_generic-landscape">Télécharger</a>
                 </li>
                 <li class="image-container">
                   <div class="image-title-socials-container">
                     <div class="image-title-container">
-                      <h3>Bannière Linkedin</h3>
+                      <h3>Linkedin banner</h3>
                       <p>(1584x396)</p>
                     </div>
                     <div class="image-socials-container">
                       <img src="../shared-assets/socials/linkedin.svg" alt="linkedin">
                     </div>
                   </div>
-                    <img src="assets/generic-banners/1584x396.png" alt="Bijorhca Linkedin Banner" class="generic-banners">
-                    <a href="assets/generic-banners/1584x396.png" download="BIJORHCA-JAN-26_linkedin.png" class="download-button-small" data-button-id="BIJORHCA-JAN-26_generic-linkedin">Download</a>
+                    <img src="assets/generic-banners/1584x396.png" alt="Shoppe Object Linkedin Banner" class="generic-banners">
+                    <a href="assets/generic-banners/1584x396.png" download="SHOPPE-OBJECT-JAN-26_linkedin.png" class="download-button-small" data-button-id="SOP-JAN-26_generic-linkedin">Télécharger</a>
                 </li>
                 <li class="image-container">
                   <div class="image-title-socials-container">
                     <div class="image-title-container">
-                      <h3>Signature Email</h3>
+                      <h3>Email signature</h3>
                       <p>(600x140)</p>
                     </div>
                     <div class="image-socials-container">
                       <img src="../shared-assets/socials/mail.svg" alt="mail">
                     </div>
                   </div>
-                    <img src="assets/generic-banners/600x140.png" alt="Bijorhca Email Signature" class="generic-banners">
-                    <a href="assets/generic-banners/600x140.png" download="BIJORHCA-JAN-26_email.png" class="download-button-small" data-button-id="BIJORHCA-JAN-26_generic-email">Download</a>
+                    <img src="assets/generic-banners/600x140.png" alt="Shoppe Object Email Signature" class="generic-banners">
+                    <a href="assets/generic-banners/600x140.png" download="SHOPPE-OBJECT-JAN-26_email.png" class="download-button-small" data-button-id="SOP-JAN-26_generic-email">Télécharger</a>
                 </li>
                 <li class="image-container">
                   <div class="image-title-socials-container">
                     <div class="image-title-container">
-                      <h3>Bannière</h3>
+                      <h3>Small banner</h3>
                       <p>(300x250)</p>
                     </div>
                     <div class="image-socials-container">
@@ -204,11 +204,11 @@
                       <img src="../shared-assets/socials/meta.svg" alt="meta">
                     </div>
                   </div>
-                    <img src="assets/generic-banners/300x250.png" alt="Bijorhca Small Banner" class="generic-banners">
-                    <a href="assets/generic-banners/300x250.png" download="BIJORHCA-JAN-26_banner.png" class="download-button-small" data-button-id="BIJORHCA-JAN-26_generic-banner">Download</a>
+                    <img src="assets/generic-banners/300x250.png" alt="Shoppe Object Small Banner" class="generic-banners">
+                    <a href="assets/generic-banners/300x250.png" download="SHOPPE-OBJECT-JAN-26_banner.png" class="download-button-small" data-button-id="SOP-JAN-26_generic-banner">Télécharger</a>
                 </li>
               </ul>
-              <button class="download-buttons" id="generic-downloadAll" data-button-id="BIJORHCA-JAN-26_generic-download-all">Download All</button>
+              <button class="download-buttons" id="generic-downloadAll" data-button-id="SOP-JAN-26_generic-download-all">Tout télécharger</button>
             </div>
           </div>
         </div>
