--- a/shoppe-object/fr.html
+++ b/shoppe-object/fr.html
@@ -111,7 +111,7 @@
                 <li class="image-container">
                   <div class="image-title-socials-container">
                     <div class="image-title-container">
-                      <h3>Story format</h3>
+                      <h3>Format Story</h3>
                       <p>(1080x1920)</p>
                     </div>
                     <div class="image-socials-container">
@@ -126,7 +126,7 @@
                 <li class="image-container">
                   <div class="image-title-socials-container">
                     <div class="image-title-container">
-                      <h3>Portrait Format</h3>
+                      <h3>Format Portrait</h3>
                       <p>(1080x1350)</p>
                     </div>
                     <div class="image-socials-container">
@@ -140,7 +140,7 @@
                 <li class="image-container">
                   <div class="image-title-socials-container">
                     <div class="image-title-container">
-                      <h3>Square format</h3>
+                      <h3>Format Carré</h3>
                       <p>(1080x1080)</p>
                     </div>
                     <div class="image-socials-container">
@@ -155,7 +155,7 @@
                 <li class="image-container">
                   <div class="image-title-socials-container">
                     <div class="image-title-container">
-                      <h3>Landscape Format</h3>
+                      <h3>Format Paysage</h3>
                       <p>(1200x628)</p>
                     </div>
                     <div class="image-socials-container">
@@ -170,7 +170,7 @@
                 <li class="image-container">
                   <div class="image-title-socials-container">
                     <div class="image-title-container">
-                      <h3>Linkedin banner</h3>
+                      <h3>Bannière Linkedin</h3>
                       <p>(1584x396)</p>
                     </div>
                     <div class="image-socials-container">
@@ -183,7 +183,7 @@
                 <li class="image-container">
                   <div class="image-title-socials-container">
                     <div class="image-title-container">
-                      <h3>Email signature</h3>
+                      <h3>Signature Email</h3>
                       <p>(600x140)</p>
                     </div>
                     <div class="image-socials-container">
@@ -196,7 +196,7 @@
                 <li class="image-container">
                   <div class="image-title-socials-container">
                     <div class="image-title-container">
-                      <h3>Small banner</h3>
+                      <h3>Bannière</h3>
                       <p>(300x250)</p>
                     </div>
                     <div class="image-socials-container">
