--- a/salon-international-de-la-lingerie/fr.html
+++ b/salon-international-de-la-lingerie/fr.html
@@ -119,7 +119,7 @@
                     </div>
                   </div>
                     <img src="assets/generic-banners/1080x1920.png" alt="Salon International de la Lingerie Format Story" class="generic-banners">
-                    <a href="assets/generic-banners/1080x1920.png" download="SIL-Format-Story.png" class="download-button-small" data-button-id="generic-story-SIL">Télécharger</a>
+                    <a href="assets/generic-banners/1080x1920.png" download="SIL-26-Format-Story.png" class="download-button-small" data-button-id="SIL-26_generic-story">Télécharger</a>
                 </li>
                 <li class="image-container">
                   <div class="image-title-socials-container">
@@ -133,7 +133,7 @@
                     </div>
                   </div>
                     <img src="assets/generic-banners/1080x1350.png" alt="Salon International de la Lingerie Format Portrait" class="generic-banners">
-                    <a href="assets/generic-banners/1080x1350.png" download="SIL-Format-Portrait.png" class="download-button-small" data-button-id="generic-portrait-SIL">Télécharger</a>
+                    <a href="assets/generic-banners/1080x1350.png" download="SIL-26-Format-Portrait.png" class="download-button-small" data-button-id="SIL-26_generic-portrait">Télécharger</a>
                 </li>
                 <li class="image-container">
                   <div class="image-title-socials-container">
@@ -148,7 +148,7 @@
                     </div>
                   </div>
                     <img src="assets/generic-banners/1080x1080.png" alt="Salon International de la Lingerie Format Carré" class="generic-banners">
-                    <a href="assets/generic-banners/1080x1080.png" download="SIL-format-carre.png" class="download-button-small" data-button-id="generic-square-SIL">Télécharger</a>
+                    <a href="assets/generic-banners/1080x1080.png" download="SIL-26-format-carre.png" class="download-button-small" data-button-id="SIL-26_generic-square">Télécharger</a>
                 </li>
                 <li class="image-container">
                   <div class="image-title-socials-container">
@@ -163,7 +163,7 @@
                     </div>
                   </div>
                     <img src="assets/generic-banners/1200x628.png" alt="Salon International de la Lingerie Format Paysage" class="generic-banners">
-                    <a href="assets/generic-banners/1200x628.png" download="SIL-format-paysage.png" class="download-button-small" data-button-id="generic-landscape-SIL">Télécharger</a>
+                    <a href="assets/generic-banners/1200x628.png" download="SIL-26-format-paysage.png" class="download-button-small" data-button-id="SIL-26_generic-landscape">Télécharger</a>
                 </li>
                 <li class="image-container">
                   <div class="image-title-socials-container">
@@ -176,7 +176,7 @@
                     </div>
                   </div>
                     <img src="assets/generic-banners/1584x396.png" alt="Salon International de la Lingerie Bannière Linkedin" class="generic-banners">
-                    <a href="assets/generic-banners/1584x396.png" download="SIL-banniere-linkedin.png" class="download-button-small" data-button-id="generic-linkedin-banner-SIL">Télécharger</a>
+                    <a href="assets/generic-banners/1584x396.png" download="SIL-26-banniere-linkedin.png" class="download-button-small" data-button-id="SIL-26_generic-linkedin">Télécharger</a>
                 </li>
                 <li class="image-container">
                   <div class="image-title-socials-container">
@@ -189,7 +189,7 @@
                     </div>
                   </div>
                     <img src="assets/generic-banners/600x140.png" alt="Salon International de la Lingerie Signature Email" class="generic-banners">
-                    <a href="assets/generic-banners/600x140.png" download="SIL-signature-email.png" class="download-button-small" data-button-id="generic-email-signature-SIL">Télécharger</a>
+                    <a href="assets/generic-banners/600x140.png" download="SIL-26-signature-email.png" class="download-button-small" data-button-id="SIL-26_generic-email">Télécharger</a>
                 </li>
                 <li class="image-container">
                   <div class="image-title-socials-container">
@@ -203,10 +203,10 @@
                     </div>
                   </div>
                     <img src="assets/generic-banners/300x250.png" alt="Salon International de la Lingerie Petite Bannière" class="generic-banners">
-                    <a href="assets/generic-banners/300x250.png" download="SIL-petite-banniere.png" class="download-button-small" data-button-id="generic-small-banner-SIL">Télécharger</a>
+                    <a href="assets/generic-banners/300x250.png" download="SIL-26-petite-banniere.png" class="download-button-small" data-button-id="SIL-26_generic-banner">Télécharger</a>
                 </li>
               </ul>
-              <button class="download-buttons" id="generic-downloadAll" data-button-id="generic-download-all">Tout télécharger</button>
+              <button class="download-buttons" id="generic-downloadAll" data-button-id="SIL-26_generic-download-all">Tout télécharger</button>
             </div>
           </div>
         </div>
