--- a/salon-international-de-la-lingerie/index.html
+++ b/salon-international-de-la-lingerie/index.html
@@ -120,7 +120,7 @@
                     </div>
                   </div>
                     <img src="assets/generic-banners/1080x1920.png" alt="Salon international de la Lingerie Story Format" class="generic-banners">
-                    <a href="assets/generic-banners/1080x1920.png" download="SIL-Story-Format.png" class="download-button-small" data-button-id="generic-story-SIL">Download</a>
+                    <a href="assets/generic-banners/1080x1920.png" download="SIL-26-Story-Format.png" class="download-button-small" data-button-id="SIL-26_generic-story">Download</a>
                 </li>
                 <li class="image-container">
                   <div class="image-title-socials-container">
@@ -134,7 +134,7 @@
                     </div>
                   </div>
                     <img src="assets/generic-banners/1080x1350.png" alt="Salon international de la Lingerie Portrait Format" class="generic-banners">
-                    <a href="assets/generic-banners/1080x1350.png" download="SIL-Portrait-Format.png" class="download-button-small" data-button-id="generic-portrait-SIL">Download</a>
+                    <a href="assets/generic-banners/1080x1350.png" download="SIL-26-Portrait-Format.png" class="download-button-small" data-button-id="SIL-26_generic-portrait">Download</a>
                 </li>
                 <li class="image-container">
                   <div class="image-title-socials-container">
@@ -149,7 +149,7 @@
                     </div>
                   </div>
                     <img src="assets/generic-banners/1080x1080.png" alt="Salon international de la Lingerie Square Format" class="generic-banners">
-                    <a href="assets/generic-banners/1080x1080.png" download="SIL-square-format.png" class="download-button-small" data-button-id="generic-square-SIL">Download</a>
+                    <a href="assets/generic-banners/1080x1080.png" download="SIL-26-square-format.png" class="download-button-small" data-button-id="SIL-26_generic-square">Download</a>
                 </li>
                 <li class="image-container">
                   <div class="image-title-socials-container">
@@ -164,7 +164,7 @@
                     </div>
                   </div>
                     <img src="assets/generic-banners/1200x628.png" alt="Salon international de la Lingerie Landscape Format" class="generic-banners">
-                    <a href="assets/generic-banners/1200x628.png" download="SIL-Landscape-format.png" class="download-button-small" data-button-id="generic-landscape-SIL">Download</a>
+                    <a href="assets/generic-banners/1200x628.png" download="SIL-26-Landscape-format.png" class="download-button-small" data-button-id="SIL-26_generic-landscape">Download</a>
                 </li>
                 <li class="image-container">
                   <div class="image-title-socials-container">
@@ -177,7 +177,7 @@
                     </div>
                   </div>
                     <img src="assets/generic-banners/1584x396.png" alt="Salon international de la Lingerie Linkedin Banner" class="generic-banners">
-                    <a href="assets/generic-banners/1584x396.png" download="SIL-linkedin-banner.png" class="download-button-small" data-button-id="generic-linkedin-banner-SIL">Download</a>
+                    <a href="assets/generic-banners/1584x396.png" download="SIL-26-linkedin-banner.png" class="download-button-small" data-button-id="SIL-26_generic-linkedin">Download</a>
                 </li>
                 <li class="image-container">
                   <div class="image-title-socials-container">
@@ -190,7 +190,7 @@
                     </div>
                   </div>
                     <img src="assets/generic-banners/600x140.png" alt="Salon international de la Lingerie Email Signature" class="generic-banners">
-                    <a href="assets/generic-banners/600x140.png" download="SIL-email-signature.png" class="download-button-small" data-button-id="generic-email-signature-SIL">Download</a>
+                    <a href="assets/generic-banners/600x140.png" download="SIL-26-email-signature.png" class="download-button-small" data-button-id="SIL-26_generic-email">Download</a>
                 </li>
                 <li class="image-container">
                   <div class="image-title-socials-container">
@@ -204,10 +204,10 @@
                     </div>
                   </div>
                     <img src="assets/generic-banners/300x250.png" alt="Salon international de la Lingerie Small Banner" class="generic-banners">
-                    <a href="assets/generic-banners/300x250.png" download="SIL-small-banner.png" class="download-button-small" data-button-id="generic-small-banner-SIL">Download</a>
+                    <a href="assets/generic-banners/300x250.png" download="SIL-26-small-banner.png" class="download-button-small" data-button-id="SIL-26_generic-banner">Download</a>
                 </li>
               </ul>
-              <button class="download-buttons" id="generic-downloadAll" data-button-id="generic-download-all">Download All</button>
+              <button class="download-buttons" id="generic-downloadAll" data-button-id="SIL-26_generic-download-all">Download All</button>
             </div>
           </div>
         </div>
