--- a/shoppe-object/index.html
+++ b/shoppe-object/index.html
@@ -35,8 +35,8 @@
         <p class="title_description">media kit</p>
       </div>
       <div id="switch-lang">
-        <a title="fr" class="lang_link" href="../SHOPPE-OBJECT/fr">FR</a>
-        <a title="en" class="lang_link" href="../SHOPPE-OBJECT/">EN</a>
+        <a title="fr" class="lang_link" href="../shoppe-object/fr">FR</a>
+        <a title="en" class="lang_link" href="../shoppe-object/">EN</a>
       </div>
     </div>
   </nav>
@@ -231,3 +231,4 @@
   <script type="module" src="../shared-assets/js/main.js"></script>
 </body>
 </html>
+
