--- a/shoppe-object/fr.html
+++ b/shoppe-object/fr.html
@@ -34,8 +34,8 @@
         <p class="title_description">media kit</p>
       </div>
       <div id="switch-lang">
-        <a title="fr" class="lang_link" href="../bijorhca/fr">FR</a>
-        <a title="en" class="lang_link" href="../bijorhca/">EN</a>
+        <a title="fr" class="lang_link" href="../shoppe-object/fr">FR</a>
+        <a title="en" class="lang_link" href="../shoppe-object/">EN</a>
       </div>
     </div>
   </nav>
