--- a/premiere-classe/fr.html
+++ b/premiere-classe/fr.html
@@ -59,10 +59,10 @@
                   <label for="standNumber">Saisissez votre numéro de stand</label>
                   <p class="label-description">Saisissez vos références de stand ci-dessous.</p>
                   <div class="inputs_wrapper">
-                    <div class="input_wrapper">
+                    <!--div class="input_wrapper">
                       <p>Numéro du hall : </p>
                       <input type="text" autocapitalize="on" value="1" id="hallNumber" placeholder="1" maxlength="1" disabled>
-                    </div>
+                    </div-->
                     <div class="input_wrapper">
                       <p>Numéro de stand : </p>
                       <input type="text" id="standNumber" placeholder="A21" maxlength="10" oninput="this.value = this.value.toUpperCase().replace(/[^A-Z0-9\/ ]/g, '').slice(0, 10);">
