--- a/premiere-classe/index.html
+++ b/premiere-classe/index.html
@@ -60,10 +60,10 @@
                   <label for="standNumber">Enter Your Stand Number</label>
                   <p class="label-description">Enter your stand references below.</p>
                   <div class="inputs_wrapper">
-                    <div class="input_wrapper">
+                    <!--div class="input_wrapper">
                       <p>Hall Number: </p>
                       <input type="text" autocapitalize="on" value="1" id="hallNumber" placeholder="1" maxlength="1" disabled>
-                    </div>
+                    </div-->
                     <div class="input_wrapper">
                       <p>Stand Number: </p>
                       <input type="text" id="standNumber" placeholder="A21" maxlength="10" oninput="this.value = this.value.toUpperCase().replace(/[^A-Z0-9\/ ]/g, '').slice(0, 10);">
